# GreyhoundRacingPrediction

./: .gitignore  README.md  pyproject.toml  requirements.txt
archives/: 04-modeling_missing_sec_time.ipynb  06-greyhound_elo_ratings.ipynb
notebooks/: 00-testing_notebook.ipynb  01-merge_past_dog_infos.ipynb  01-testing_notebook.ipynb  02-past_dog_infos_df_analysis.ipynb  03-preliminary_cleaning.ipynb  04-handling_missing_sec_time.ipynb  05-feature_engineering_dog_infos.ipynb  06-race_infos_analysis.ipynb  07-merge_race_header.ipynb  08-merge_race_infos.ipynb  09-cleaning_processing_header.ipynb  09bis-fix_race_date.ipynb  10-cleaning_processing_race_infos.ipynb  11-dataset_class.ipynb  11-dataset_class_test.ipynb
src/: OLDutils.py  __init__.py  utils.py
src/cleaning/: dog_infos_cleaning.py
src/dataset/: clean.py  dataset_class.py  load.py
src/features/: build_race_infos_dataset.py  process_dog_infos.py  process_features.py  process_race_header.py  process_race_infos.py
tests/: __init__.py
tests/dataset/: test_load.py
