[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "greyhound-racing-prediction"
version = "0.0.0"
description = "Greyhound racing race winner prediction."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
